--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -342,10 +342,10 @@
                           담당자 <i class="fas fa-sort"></i>
                         </th>
                         <th class="sortable" data-sort="workShift" style="width: 80px;">
-                          근무 시프트 <i class="fas fa-sort"></i>
+                          시프트 <i class="fas fa-sort"></i>
                         </th>
                         <th class="sortable" data-sort="workHours" style="width: 80px;">
-                          근무 시간 <i class="fas fa-sort"></i>
+                          WH <i class="fas fa-sort"></i>
                         </th>
                         <th class="sortable" data-sort="total">
                           총 건수 <i class="fas fa-sort"></i>
@@ -801,7 +801,6 @@
               currentSort.direction = 'asc';
             } else {
               // 정렬 종료 (기본 정렬로 돌아감)
-              currentSort.column = 'total';
               currentSort.direction = 'none';
             }
           } else {
