CSP(Content Security Policy) 오류를 해결하기 위해 두 가지 변경사항을 적용했습니다:
index.html 파일에 CSP 메타 태그를 추가했습니다:
필요한 외부 리소스(Google Charts, Bootstrap, jQuery 등)에 대한 접근을 허용
인라인 스크립트와 스타일을 허용
프레임 접근 권한을 설정하여 Google 도메인에서의 접근 허용
dashboard.js 파일의 doGet() 함수를 수정했습니다:
setXFrameOptionsMode(HtmlService.XFrameOptionsMode.ALLOWALL)을 추가하여 X-Frame-Options 헤더를 설정
이를 통해 iframe 내에서 콘텐츠가 로드될 수 있도록 허용

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,6 +4,7 @@
   <head>
     <base target="_top">
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net https://*.googleusercontent.com; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; script-src 'self' https://www.gstatic.com https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval'; frame-ancestors 'self' https://*.googleusercontent.com https://*.google.com">
     <title>배차 대시보드</title>
     <!-- Google Charts 라이브러리 로드 -->
     <script src="https://www.gstatic.com/charts/loader.js"></script>
