--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -11,6 +11,8 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- 폰트어썸 CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
       body {
         font-family: 'Noto Sans KR', Arial, sans-serif;
